--- a/src/app/static/index.html
+++ b/src/app/static/index.html
@@ -591,8 +591,8 @@
 
             let imageData = null;
             if (imageFile) {
-                if (imageFile.size > 100 * 1024) { // 100KB limit
-                    log('Image file size must be under 100KB', 'error');
+                if (imageFile.size > 1024 * 1024) { // 1MB limit
+                    log('Image file size must be under 1MB', 'error');
                     return;
                 }
                 imageData = await new Promise((resolve, reject) => {
